[tool.poetry]
name = "jeza-ynput-dev"
version = "0.1.0"
description = ""
authors = ["Jakub Jezek <jakubjezek001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ayon-python-api = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
